@@ -13,3 +13,4 @@ Patches and Suggestions
 - Evan Klitzke
 - Michael Kennedy
 - Thomas Hanssen Nornes
+- Øyvind Heddeland Instefjord
