@@ -9,6 +9,8 @@ In development
 - Add Python 3.7 and 3.8 to CI matrix.
 - Drop Python 2.6 and Python 3.3 and pypy from CI matrix.
 - Add section on unsubscribing to documentation (Michael Kennedy)
+- Fix Events.__len__ counting __events__
+- Add event_slot_cls argument to Events to allow custom EventSlot class.
 
 Version 0.3
 -----------
